--- a/web/src/app.css
+++ b/web/src/app.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+ .controls {
+   text-align: right;
+    padding: 0 0 2px 0;
+
+    svg {
+      margin: 0 0 0 6px;
+    }
+}
